--- a/home/index.html
+++ b/home/index.html
@@ -35,18 +35,19 @@
     <div class="container">
 
      <div class="row">
-    <div class="two-thirds column" style="margin-top: 25%">
+    <div class="one-half column" style="margin-top: 25%">
     <h4>vilinfield</h4>
     <p>Home page</p>
     
 
   </div>
    <div class="row">
-    <div class="one-third column" style="margin-top: 25%">
+    <div class="one-half column" style="margin-top: 25%">
     <h4>Sites</h4>
       <h5>OwnROM</h5>
-       <a class="button button-primary" href="#">Link</a>
-       <a class="button" href="#">Source</a>
+      <a class="button button-primary" href="http://ownrom.github.io">Link</a>
+       <a class="button" href="http://vilinfield.github.io/ownrom/index.html">My Link</a>
+       <a class="button" href="https://github.com/vilinfield/vilinfield.github.io/tree/master/ownrom">Source</a>
        <br>
         </div>
 
