Gave commit links for help
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>

--- a/ownrom/index.html
+++ b/ownrom/index.html
@@ -86,6 +86,14 @@ Make sure, that within a pair of { }, all lines except the last end with a , and
 <br/>
 Since I'm sure you've got it by now, add an entry to vendor blobs for your device here, generally they can be found at TheMuppets GitHub
 <br/>
+Refer to these commits for help
+<br/>
+https://github.com/OwnROM-Devices/android_device_moto_shamu/commit/b42aa2774d368c5aa186021d526a822bc5547ef5
+<br/>
+https://github.com/OwnROM-Devices/android_device_moto_shamu/commit/6ef60345d598c466282ac0788d3e44854ce7437b
+<br/>
+https://github.com/OwnROM-Devices/android_device_moto_shamu/commit/c3c113a350bb1e465f83e0b80c4e69274302fc3d
+<br/>
 Lastly, vendorsetup.sh
 <br/>
 Whatever the contents are, delete it, and make it
