Redone Download Page

--- a/index.html
+++ b/index.html
@@ -248,101 +248,78 @@
         <div class="container">
             <div class="docs-inner">
                 <h2 class="title text-center">Downloads</h2>
+
                 <div class="block">
-                    <h3 class="sub-title text-center">Lollipop [5.0.2]</h3>
-                    <div class="table-responsive">
+
+                   <h3 class="sub-title text-center">Lollipop ROM [5.1.1]</h3>
+                   <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Code</th>
-                                <th>Download ROM</th>
-                                <th>Download Kernel</th>
-                                <th>Gapps</th>
+                                <th>Codename</th>
+                                <th>Download</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S5</th>
-                                <td>KLTE</td>
-                                <td><a href="http://bit.ly/1ygqQIi" target="_blank">Link</a></td>
-                                <td><a href="http://bit.ly/1CwekB9" target="_blank">Link</a></td>
-                                <td><a href="http://bit.ly/1z6mejh" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">LG Optimus L9</th>
-                                <td>P760</td>
-                                <td><a href="http://bit.ly/1ajkbSq" target="_blank">Link</a></td>
-                                <td>NA</td>
-                                <td><a href="http://bit.ly/1z6mejh" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Android One-All Devices</th>
-                                <td>SPROUT</td>
-                                <td>NA</td>
-                                <td><a href="http://akhilnarang.github.io/Downloads/OwnROM" target="_blank">Link</a></td>
-                                <td><a href="http://bit.ly/1z6mejh" target="_blank">Link</a></td>
-                            </tr>
+                           <tr>
+                               <th>Coming Soon</th>
+                               <th>N/A</th>
+                               <th>N/A</th>
+                        </tr>
                         </tbody>
                     </table>
-                    </div>
-                    <h3 class="sub-title text-center">Kitkat [4.4.4] [Discontinued]</h3>
-                    <div class="table-responsive">
+
+                    <h3 class="sub-title text-center">Lollipop G-Apps [5.1.1]</h3>
+                   <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>Code</th>
+                                <th>Codename</th>
                                 <th>Download</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Nexus 5</th>
-                                <td>HAMMERHEAD</td>
-                                <td><a href="http://bit.ly/1b1ACmK" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S2</th>
-                                <td>I9100</td>
-                                <td><a href="http://bit.ly/1de68j1" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S3</th>
-                                <td>I9300</td>
-                                <td><a href="http://bit.ly/1b1ALqm" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Samsung Galaxy S4</th>
-                                <td>JFLTE </td>
-                                <td><a href="http://bit.ly/1DwCbRz" target="_blank">Link</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Sony Xperia Z</th>
-                                <td>YUGA</td>
-                                <td><a href="http://bit.ly/1DKVS7q" target="_blank">Link</a></td>
+                                <th scope="row">Minimal G-Apps</th>
+                                <td>N/A</td>
+                                <td><a href="http://bit.ly/1F9NHTT" target="_blank">Link</a></td>
                             </tr>
                             </tr>
                             <tr>
-                                <th scope="row">G-Apps</th>
-                                <td>Google Edition</td>
-                                <td><a href="http://bit.ly/1GiKotx" target="_blank">Link</a></td>
-                            </tr>
-                            </tr>
-                            <tr>
-                                <th scope="row">G-Apps</th>
-                                <td>Cyanogen Edition </td>
-                                <td><a href="http://bit.ly/1FmoMjT" target="_blank">Link</a></td>
-                            </tr>
-                            </tr>
-                            <tr>
-                                <th scope="row">G-Apps</th>
-                                <td>Default Edition</td>
-                                <td><a href="http://bit.ly/1KgZRhC" target="_blank">Link</a></td>
+                                <th scope="row">Normal G-Apps</th>
+                                <td>N/A</td>
+                                <td><a href="http://bit.ly/1cdgoXL" target="_blank">Link</a></td>
                             </tr>
                         </tbody>
                     </table>
+
+                     <h3 class="sub-title text-center">Lollipop Kernel [5.1.1]</h3>
+                   <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Codename</th>
+                                <th>Download</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">Android One</th>
+                                <td>SPROUT</td>
+                                <td><a href="http://bit.ly/1FJlnLV" target="_blank">Link</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                     </div>
+
+                  <h3 class="sub-title text-center">Old Downloads</h3>
+                <p class="intro  text-center"><a href="olddownloads.html" target="_blank">Link</a></p>
+
+
                     <h2 class="title text-center">Install Instructions</h2>
                     <ul class="feature-list list-unstyled text-center">
                         <li><i class="fa fa-check"></i> Download latest OwnROM zip for your device</li>
