--- a/olddownloads.html
+++ b/olddownloads.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 
 <head>
-    <title>Build Guide</title>
+    <title>Old Downloads</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,13 +40,6 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-<style>
-body {
-    text-align: center;
-    text-size: 10px;
-}
-</style>
 </head>
 
 <body data-spy="scroll">
