Fixed certain typos

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
         <div class="container text-center">
             <h2 class="title">Features</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fa fa-check"></i> Build With Linaro toolchain with -03 optimizations, For ROM and Kernel Compilations</li>
-                <li><i class="fa fa-check"></i> Build In SuperUser (Not Yet)</li>
+                <li><i class="fa fa-check"></i> Built With Linaro toolchain with -03 optimizations, For ROM and Kernel Compilations</li>
+                <li><i class="fa fa-check"></i> Built-In SuperUser (Not Yet)</li>
                 <li><i class="fa fa-check"></i> Quick Notification Drawer</li>
-                <li><i class="fa fa-check"></i> Clear all Recent App's Button</li>
-                <li><i class="fa fa-check"></i> App opps</li>
+                <li><i class="fa fa-check"></i> Clear all Recent Apps Button</li>
+                <li><i class="fa fa-check"></i> App-ops</li>
                 <li><i class="fa fa-check"></i> Slims PrivacyGuard Manager</li>
                 <li><i class="fa fa-check"></i> Pulse Notification Light</li>
                 <li><i class="fa fa-check"></i> Ascending ringtone</li>
