Update documentation link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <ul class="meta list-inline">
                 <li><a href="http://bit.ly/1O2KtWg" target="_blank">View on GitHub</a></li>
-                <li><a href="http://bit.ly/1En9bjB" target="_blank">Documentation</a></li>
+                <li><a href="http://bit.ly/1Q6j6LW" target="_blank">Documentation</a></li>
                 <li><a href="http://bit.ly/1Fye9Gd" target="_blank">Community</a></li>
             </ul>
             <!--//meta-->
