--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
 
                     </div>
 
+                     <h3 class="sub-title text-center">Changelog</h3>
+                <p class="intro  text-center"><a href="changelog.html" target="_blank">Link</a></p>
+
                   <h3 class="sub-title text-center">Old Downloads</h3>
                 <p class="intro  text-center"><a href="olddownloads.html" target="_blank">Link</a></p>
 
