--- a/post1.html
+++ b/post1.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="assets/plugins/prism/prism.css">
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:500,100,300,700,400' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -48,7 +49,7 @@
         <div class="container">
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
-                    <span class="logo-title">OwnRom</span>
+                    <span class="logo-title">OwnROM</span>
                 </a>
             </h1>
             <!--//logo-->
