Updated feature list

--- a/index.html
+++ b/index.html
@@ -196,40 +196,16 @@
         <div class="container text-center">
             <h2 class="title">Features</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fa fa-check"></i> Built With Linaro toolchain with -03 optimizations, For ROM and Kernel Compilations</li>
-                <li><i class="fa fa-check"></i> Built-In SuperUser (Not Yet)</li>
-                <li><i class="fa fa-check"></i> Quick Notification Drawer</li>
-                <li><i class="fa fa-check"></i> Clear all Recent Apps Button</li>
-                <li><i class="fa fa-check"></i> App-ops</li>
-                <li><i class="fa fa-check"></i> Slims PrivacyGuard Manager</li>
-                <li><i class="fa fa-check"></i> Pulse Notification Light</li>
-                <li><i class="fa fa-check"></i> Ascending ringtone</li>
-                <li><i class="fa fa-check"></i> Heads Up</li>
-                <li><i class="fa fa-check"></i> Double tap to sleep statusbar</li>
-                <li><i class="fa fa-check"></i> Smooth scrolling</li>
-                <li><i class="fa fa-check"></i> Blacklist support</li>
-                <li><i class="fa fa-check"></i> Protected apps</li>
-                <li><i class="fa fa-check"></i> ProximityWake</li>
+                <li><i class="fa fa-check"></i> Based on latest version of Android [5.1.1] and Cyanogenmod 12.1</li>
+                <li><i class="fa fa-check"></i> Built-In SuperUser</li>
+                <li><i class="fa fa-check"></i> CM Theme Engine</li>
                 <li><i class="fa fa-check"></i> CM Profiles</li>
-                <li><i class="fa fa-check"></i> Volume rocker control</li>
-                <li><i class="fa fa-check"></i> Development animation transition mode 0.75 and 0.25</li>
-                <li><i class="fa fa-check"></i> Battery Percentage in statusbar</li>
-                <li><i class="fa fa-check"></i> Battery Icons</li>
-                <li><i class="fa fa-check"></i> Weather in Statusbar</li>
-                <li><i class="fa fa-check"></i> Dark Material Themed Settings</li>
-                <li><i class="fa fa-check"></i> OwnSettings</li>
-                <li><i class="fa fa-check"></i> Changelog</li>
-                <li><i class="fa fa-check"></i> Toast animations</li>
-                <li><i class="fa fa-check"></i> Listview animations</li>
-                <li><i class="fa fa-check"></i> Lockscreen shortcuts</li>
-                <li><i class="fa fa-check"></i> Battery Saver Color</li>
-                <li><i class="fa fa-check"></i> Smart and Quick pull down</li>
-                <li><i class="fa fa-check"></i> Option To Disable QS on secure lockscreen</li>
-                <li><i class="fa fa-check"></i> Heads up Settings</li>
-                <li><i class="fa fa-check"></i> Per app configurations lockscreen notifications</li>
-                <li><i class="fa fa-check"></i> Preformance Control</li>
-                <li><i class="fa fa-check"></i> App Circle Sidebar</li>
-                <li><i class="fa fa-check"></i> Let Us Know What You Like...</li>
+                <li><i class="fa fa-check"></i> All other CM features</li>
+                <li><i class="fa fa-check"></i> Custom staus bar options</li>
+                <li><i class="fa fa-check"></i> Custom animations</li>
+                <li><i class="fa fa-check"></i> Built in changelog</li>
+                <li><i class="fa fa-check"></i> And more...</li>
+                <li><i class="fa fa-check"></i> Let Us Know What You Like... Features are always being added</li>
                 <h2 class="title">Credits</h2>
                 <li><i class="fa fa-check"></i> Google</li>
                 <li><i class="fa fa-check"></i> Paranoid Android</li>
