--- a/index.html
+++ b/index.html
@@ -208,13 +208,10 @@
                 <li><i class="fa fa-check"></i> Let Us Know What You Like... Features are always being added</li>
                 <h2 class="title">Credits</h2>
                 <li><i class="fa fa-check"></i> Google</li>
-                <li><i class="fa fa-check"></i> Paranoid Android</li>
-                <li><i class="fa fa-check"></i> AOSPAL</li>
                 <li><i class="fa fa-check"></i> Cyanogenmod</li>
-                <li><i class="fa fa-check"></i> Antonius Maximus (For all android Sounds) </li>
-                <li><i class="fa fa-check"></i> owndroid.nl </li>
-                <li><i class="fa fa-check"></i> Fusion SP </li>
+                <li><i class="fa fa-check"></i> Various other ROM's</li>
                 <li><i class="fa fa-check"></i> Linus Torvalds and the Linux Foundation</li>
+                <li><i class="fa fa-check"></i> All the people who helped out with this project</li>
             </ul>
         </div>
         <!--//container-->
