Add in ROM section to downloads

--- a/index.html
+++ b/index.html
@@ -237,9 +237,39 @@
                         </thead>
                         <tbody>
                            <tr>
+                               <th>Nexus 6</th>
+                               <th>Shamu</th>
                                <th>Coming Soon</th>
-                               <th>N/A</th>
-                               <th>N/A</th>
+                        </tr>
+                        <tr>
+                               <th>Android One</th>
+                               <th>Sprout</th>
+                               <th>Coming Soon</th>
+                        </tr>
+                        <tr>
+                               <th>Samsung Galaxy S3</th>
+                               <th>I9300</th>
+                               <th>Coming Soon</th>
+                        </tr>
+                        <tr>
+                               <th>Moto X</th>
+                               <th>Ghost</th>
+                               <th>Coming Soon</th>
+                        </tr>
+                        <tr>
+                               <th>Sony Xperia SP</th>
+                               <th>Huashan</th>
+                               <th>Coming Soon</th>
+                        </tr>
+                        <tr>
+                               <th>Samsung Galaxy S4</th>
+                               <th>Jflte</th>
+                               <th>Coming Soon</th>
+                        </tr>
+                        <tr>
+                               <th>Moto G 2013</th>
+                               <th>Falcon</th>
+                               <th>Coming Soon</th>
                         </tr>
                         </tbody>
                     </table>
