Update download links and features

--- a/index.html
+++ b/index.html
@@ -196,15 +196,26 @@
         <div class="container text-center">
             <h2 class="title">Features</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fa fa-check"></i> Based on latest version of Android [5.1.1] and Cyanogenmod 12.1</li>
                 <li><i class="fa fa-check"></i> Built-In SuperUser</li>
-                <li><i class="fa fa-check"></i> CM Theme Engine</li>
-                <li><i class="fa fa-check"></i> CM Profiles</li>
-                <li><i class="fa fa-check"></i> All other CM features</li>
-                <li><i class="fa fa-check"></i> Custom staus bar options</li>
-                <li><i class="fa fa-check"></i> Custom animations</li>
-                <li><i class="fa fa-check"></i> Built in changelog</li>
-                <li><i class="fa fa-check"></i> And more...</li>
+                <li><i class="fa fa-check"></i> OwnSettings</li>
+                <li><i class="fa fa-check"></i> Built-In Changelog</li>
+                <li><i class="fa fa-check"></i> Network Traffic Monitor</li>
+                <li><i class="fa fa-check"></i> Toast Animations</li>
+                <li><i class="fa fa-check"></i> QS Customization</li>
+                <li><i class="fa fa-check"></i> Clock customization</li>
+                <li><i class="fa fa-check"></i> Theme Engine</li>
+                <li><i class="fa fa-check"></i> Privacy Guard</li>
+                <li><i class="fa fa-check"></i> Pulse Notification Light</li>
+                <li><i class="fa fa-check"></i> Lockscreen Corner Shortcuts</li>
+                <li><i class="fa fa-check"></i> Ambient Display</li>
+                <li><i class="fa fa-check"></i> DT2W (Hardcoded in ROM)</li>
+                <li><i class="fa fa-check"></i> Density Changer</li>
+                <li><i class="fa fa-check"></i> Immersive Mode (per App)</li>
+                <li><i class="fa fa-check"></i> Battery Light</li>
+                <li><i class="fa fa-check"></i> Quick and Smart Statusbar</li>
+                <li><i class="fa fa-check"></i> Profiles</li>
+                <li><i class="fa fa-check"></i> Black List</li>
+                <li><i class="fa fa-check"></i> And many more...</li>
                 <li><i class="fa fa-check"></i> Let Us Know What You Like... Features are always being added</li>
                 <h2 class="title">Credits</h2>
                 <li><i class="fa fa-check"></i> Google</li>
@@ -239,17 +250,17 @@
                            <tr>
                                <th>Nexus 6</th>
                                <th>Shamu</th>
-                               <th>Coming Soon</th>
+                               <td><a href="http://bit.ly/1FTWEEC" target="_blank">Link</a></td>
                         </tr>
                         <tr>
                                <th>Android One</th>
-                               <th>Sprout</th>
-                               <th>Coming Soon</th>
+                               <th>Sprout4</th>
+                               <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a></td>
                         </tr>
                         <tr>
                                <th>Samsung Galaxy S3</th>
                                <th>I9300</th>
-                               <th>Coming Soon</th>
+                               <td><a href="http://bit.ly/1d66I22" target="_blank">Link</a></td>
                         </tr>
                         <tr>
                                <th>Moto X</th>
@@ -259,12 +270,12 @@
                         <tr>
                                <th>Sony Xperia SP</th>
                                <th>Huashan</th>
-                               <th>Coming Soon</th>
+                               <td><a href="http://bit.ly/1BxlULv" target="_blank">Link</a></td>
                         </tr>
                         <tr>
                                <th>Samsung Galaxy S4</th>
-                               <th>Jflte</th>
-                               <th>Coming Soon</th>
+                               <th>Jfltetmo</th>
+                               <td><a href="http://bit.ly/1PVdqd0" target="_blank">Link</a></td>
                         </tr>
                         <tr>
                                <th>Moto G 2013</th>
