Add Moto X Download Link

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <tr>
                                <th>Moto X</th>
                                <th>Ghost</th>
-                               <th>Coming Soon</th>
+                               <td><a href="http://bit.ly/1Qjar9k" target="_blank">Link</a></td>
                         </tr>
                         <tr>
                                <th>Sony Xperia SP</th>
