Add in new device downloads

--- a/index.html
+++ b/index.html
@@ -263,6 +263,12 @@
                                <td><a href="http://bit.ly/1Qjar9k" target="_blank">Link</a></td>
                                <td>N/A</td>
                         </tr>
+                          <tr>
+                               <th>Nexus 5</th>
+                               <th>Hammerhead</th>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=33340" target="_blank">Link</a></td>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=33341" target="_blank">Link</a></td>
+                        </tr>
                         <tr>
                                <th>Android One</th>
                                <th>Sprout4</th>
@@ -298,6 +304,12 @@
                                <th>Jfltetmo</th>
                                <td><a href="http://bit.ly/1PVdqd0" target="_blank">Link</a></td>
                                <td>N/A</td>
+                        </tr>
+                         <tr>
+                               <th>Samsung Galaxy S5</th>
+                               <th>Klte</th>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=33339" target="_blank">Link</a></td>
+                               <td><a href="https://www.androidfilehost.com/?w=files&flid=33338" target="_blank">Link</a></td>
                         </tr>
 
                         </tbody>
