--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
                 <li><i class="fa fa-check"></i> Live Memory Steps</li>
                 <li><i class="fa fa-check"></i> Slim Lockscreen Shortcuts</li>
                 <li><i class="fa fa-check"></i> TRDS 5.0</li>
+                <li><i class="fa fa-check"></i> SlimPIE</li>
+                <li><i class="fa fa-check"></i> CAF Task Manager</li>
+                <li><i class="fa fa-check"></i> App Circle Bar</li>
+                <li><i class="fa fa-check"></i> System Animations</li>
+                <li><i class="fa fa-check"></i> Improved Color Picker (with Material colors)</li>
                 <li><i class="fa fa-check"></i> And many more...</li>
                 <li><i class="fa fa-check"></i> Let Us Know What You Like... Features are always being added</li>
                 <h2 class="title">Credits</h2>
