Added in Yu Yureka
Need to upload to other address

--- a/index.html
+++ b/index.html
@@ -316,6 +316,12 @@
                                <td><a href="https://www.androidfilehost.com/?w=files&flid=33339" target="_blank">Link</a></td>
                                <td><a href="https://www.androidfilehost.com/?w=files&flid=33338" target="_blank">Link</a></td>
                         </tr>
+                           <tr>
+                               <th>Yu Yureka</th>
+                               <th>Tomato</th>
+                               <td><a href="https://basketbuild.com/devs/pranav01/OwnRom/OFFICIAL" target="_blank">Link</a></td>
+                               <td><a href="https://basketbuild.com/devs/pranav01/OwnRom/OFFICIAL/Nightlies/Tomato" target="_blank">Link</a></td>
+                        </tr>
 
                         </tbody>
                     </table>
