website: add sprout8 link
@vilinfield please update it on owndroid.nl aswell

--- a/index.html
+++ b/index.html
@@ -280,14 +280,21 @@
                                <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a></td>
                                <td>N/A</td>
                         </tr>
-                                              <tr>
+                        <tr>
+                               <th>Android One</th>
+                               <th>Sprout8</th>
+                               <td><a href="http://bit.ly/1b1HVL4" target="_blank">Link</a></td>
+                               <td>N/A</td>
+                        </tr>
+                        
+                        <tr>
                                <th>Sony Xperia SP</th>
                                <th>Huashan</th>
                                <td><a href="http://bit.ly/1BxlULv" target="_blank">Link</a></td>
                                <td>N/A</td>
                         </tr>
                            <tr>
-                               <th>One Plus One</th>
+                               <th>OnePlus One</th>
                                <th>Bacon</th>
                                <td><a href="http://bit.ly/1cC8YO6" target="_blank">Link</a></td>
                                <td><a href="https://www.androidfilehost.com/?w=files&flid=33172" target="_blank">Link</a></td>
